# langchain-rag-app

./: packages.txt  pre-requirements.sh  pyproject.toml  requirements.txt  run.sh
langchain-rag-bot/: app.py  app1.py
langchain-rag-bot/db/: chroma.sqlite3
